// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Freeze Window Studio - Right Bar it should render in closed state: closed state of Right Bar 1`] = `
<div
  class="rightBar"
>
  <button
    aria-label="rbac.notifications.pipelineName"
    class="bp3-button Button--button StyledProps--font StyledProps--main iconButton StyledProps--font StyledProps--font-weight-semi-bold StyledProps--font-size-xsmall Button--withLeftIcon Button--variation Button--variation-tertiary"
    type="button"
  >
    <span
      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
      data-icon="pipeline-deploy"
    >
      <svg
        height="24"
        viewBox="0 0 16 16"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.8 1.148a.638.638 0 01.192.577l-2.396 13.707a.614.614 0 01-.43.49.584.584 0 01-.611-.193l-3.813-4.578-1.856 2.382a.584.584 0 01-.666.194.622.622 0 01-.398-.587V8.852l-4.46-2.32a.628.628 0 01-.329-.61.618.618 0 01.423-.543l13.772-4.362a.581.581 0 01.573.131zM6.02 8.783v2.6l4.996-6.413-4.997 3.813zm5.193-5.508L2.24 6.116 5.36 7.74l5.852-4.465zm2.182.62l-4.892 6.278a.59.59 0 01.065.067l3.074 3.69 1.753-10.035z"
          fill="current-color"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="bp3-button-text"
    >
      rbac.notifications.pipelineName
    </span>
  </button>
</div>
`;

exports[`Freeze Window Studio - Right Bar it should render in open state of Notifications: open state 1`] = `
<div
  class="rightBar"
>
  <button
    aria-label="rbac.notifications.pipelineName"
    class="bp3-button Button--button StyledProps--font StyledProps--main iconButton selected StyledProps--font StyledProps--font-weight-semi-bold StyledProps--font-size-xsmall Button--withLeftIcon Button--variation Button--variation-tertiary"
    type="button"
  >
    <span
      class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
      data-icon="pipeline-deploy"
    >
      <svg
        height="24"
        viewBox="0 0 16 16"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.8 1.148a.638.638 0 01.192.577l-2.396 13.707a.614.614 0 01-.43.49.584.584 0 01-.611-.193l-3.813-4.578-1.856 2.382a.584.584 0 01-.666.194.622.622 0 01-.398-.587V8.852l-4.46-2.32a.628.628 0 01-.329-.61.618.618 0 01.423-.543l13.772-4.362a.581.581 0 01.573.131zM6.02 8.783v2.6l4.996-6.413-4.997 3.813zm5.193-5.508L2.24 6.116 5.36 7.74l5.852-4.465zm2.182.62l-4.892 6.278a.59.59 0 01.065.067l3.074 3.69 1.753-10.035z"
          fill="current-color"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="bp3-button-text"
    >
      rbac.notifications.pipelineName
    </span>
  </button>
</div>
`;

exports[`Freeze Window Studio - Right Bar it should render in open state of Notifications: open state 2`] = `
<div
  class="bp3-portal almostFullScreenPortal"
>
  <div
    class="bp3-overlay bp3-overlay-open bp3-overlay-container"
  >
    <div
      class="bp3-overlay-backdrop bp3-overlay-appear bp3-overlay-appear-active"
    />
    <div
      class="bp3-drawer bp3-position-right main almostFullScreen fullScreen showRighDrawer bp3-overlay-content bp3-overlay-appear bp3-overlay-appear-active"
      style="width: calc(100% - 270px - 60px);"
      tabindex="0"
    >
      <button
        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main almostFullScreenCloseBtn Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-cross StyledProps--main"
          icon="cross"
        >
          <svg
            data-icon="cross"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              cross
            </desc>
            <path
              d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
      </button>
      <div
        class="Layout--horizontal StyledProps--main StyledProps--padding-bottom-medium StyledProps--padding-top-medium StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey300"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--font-weight-bold StyledProps--font-size-medium"
        >
          undefined : rbac.notifications.name
        </p>
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <button
            aria-label="applyChanges"
            class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary Button--size Button--small"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              applyChanges
            </span>
          </button>
          <button
            aria-label="common.discard"
            class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--without-shadow Button--size Button--small"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              common.discard
            </span>
          </button>
        </div>
      </div>
      <div
        class="pipelineNotifications"
      >
        <div
          class="StyledProps--font StyledProps--main"
        >
          <div
            class="Layout--horizontal StyledProps--main headerActions StyledProps--flex"
          >
            <button
              aria-label="rbac.notifications.name"
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-primary"
              id="newNotificationBtn"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                icon="plus"
              >
                <svg
                  data-icon="plus"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    plus
                  </desc>
                  <path
                    d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                rbac.notifications.name
              </span>
            </button>
            <div
              class="bp3-popover-wrapper filterDropdown Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    placeholder="- Select -"
                    style="padding-right: 0px;"
                    type="text"
                    value=""
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main content StyledProps--padding-bottom-huge"
        >
          <div
            class="TableV2--table notificationTable"
          >
            <div
              class="TableV2--header"
              role="row"
            >
              <div
                class="TableV2--cell"
                colspan="1"
                role="columnheader"
                style="width: 15%;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  ENABLEDLABEL
                </p>
              </div>
              <div
                class="TableV2--cell"
                colspan="1"
                role="columnheader"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  RBAC.NOTIFICATIONS.NAMEOFTHERULE
                </p>
              </div>
              <div
                class="TableV2--cell"
                colspan="1"
                role="columnheader"
                style="width: 35%;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  CONDITIONS
                </p>
              </div>
              <div
                class="TableV2--cell"
                colspan="1"
                role="columnheader"
                style="width: 28%;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  RBAC.NOTIFICATIONS.NOTIFICATIONMETHOD
                </p>
              </div>
              <div
                class="TableV2--cell"
                colspan="1"
                role="columnheader"
                style="width: 2%;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
                >
                  
                </p>
              </div>
            </div>
            <div
              class="TableV2--body"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
